--- a/newsletter.html
+++ b/newsletter.html
@@ -3,198 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-<title>Alumni Newsletter</title>
-<style type="text/css">
-	/* Client-specific Styles */
-	#outlook a{padding:0;} /* Force Outlook to provide a "view in browser" button. */
-	body{width:100% !important;} .ReadMsgBody{width:100%;} .ExternalClass{width:100%;} /* Force Hotmail to display emails at full width */
-	body{-webkit-text-size-adjust:none;} /* Prevent Webkit platforms from changing default text sizes. */
-	
-	/* Reset Styles */
-	body{margin:0; padding:0;}
-	img{border:0; outline:none; text-decoration:none;}
-	table td{border-collapse:collapse;}
-	#backgroundTable{height:100% !important; margin:0; padding:0; width:100% !important;}
-
-	a:link, a:visited, /* Yahoo! Mail Override */ a .yshortcuts /* Yahoo! Mail Override */{
-		color:#E36A22;
-		font-weight:normal;
-		text-decoration:underline;
-	}
-	
-	body, #backgroundTable{
-		background-color:#eaeaea;
-	}
-	
-	#templateContainer{
-		border: none;
-	}
-	
-	h1, .h1{
-		color:#202020;
-		display:block;
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-		font-size:36px;
-		font-weight:bold;
-		line-height:100%;
-		margin-top:0;
-		margin-right:0;
-		margin-bottom:10px;
-		margin-left:0;
-		text-align:left;
-	}
-
-	h2, .h2{
-		color:#202020;
-		display:block;
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-		font-size:24px;
-		font-weight:bold;
-		line-height:100%;
-		margin-top:0;
-		margin-right:0;
-		margin-bottom:10px;
-		margin-left:0;
-		text-align:left;
-	}
-
-	h3, .h3{
-		color:#202020;
-		display:block;
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-		font-size:20px;
-		font-weight:bold;
-		line-height:100%;
-		margin-top:0;
-		margin-right:0;
-		margin-bottom:10px;
-		margin-left:0;
-		text-align:left;
-	}
-
-	h4, .h4{
-		color:#202020;
-		display:block;
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-		font-size:16px;
-		font-weight:bold;
-		line-height:100%;
-		margin-top:0;
-		margin-right:0;
-		margin-bottom:10px;
-		margin-left:0;
-		text-align:left;
-	}
-	
-	#templateHeader{
-		background-color:#eaeaea;
-		border-bottom:0;
-	}
-	
-	.headerContent{
-		color:#202020;
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-		font-size:34px;
-		font-weight:bold;
-		line-height:100%;
-		padding:0;
-		text-align:center;
-		vertical-align:middle;
-	}
-	
-	#headerImage{
-		height:auto;
-		max-width:560px;
-		width:560px;
-	}
-	
-	.bodyContent {
-		background-color:#d8d8d8;
-	}
-	
-	.bodyContent div{
-		color:#282828;
-		font-family:Georgia, Times, "Times New Roman", serif;
-		font-size:14px;
-		line-height:150%;
-		text-align:left;
-	}
-	
-	.bodyContent img{
-		display:inline;
-	}
-
-	.note{
-		font-size:16px;
-		font-style:italic;
-		margin-bottom: 10px;
-	}
-
-	.article{
-		border-top:1px dashed #aeaeae;
-	}
-
-	#templateSidebar div {
-		color: #737373;
-		font-family:Arial, "Helvetica Neue", Helvetica, sans-serif;
-		font-size:10px;
-		line-height:150%;
-		text-align:left;
-	}
-
-	#templateSidebar h2, #templateSidebar .h2 {
-		font-family:Georgia, Times, "Times New Roman", serif;
-		font-weight:normal;
-	}
-
-	#templateSidebar h4, #templateSidebar .h4 {
-		font-size:12px;
-		line-height:125%;
-		text-align:left;
-		margin: 0;
-	}
-
-	.relatedEvents {
-		border-bottom:1px dashed #aeaeae;
-	}
-
-	.templateButton{
-		-moz-border-radius:3px;
-		-webkit-border-radius:3px;
-		background-color:#336699;
-		border:0;
-		border-collapse:separate !important;
-		border-radius:3px;
-	}
-
-	#templateSidebar .templateButton, #templateSidebar .templateButton div, #templateSidebar .templateButton div a:link, #templateSidebar .templateButton div a:visited, /* Yahoo! Mail Override */ .templateButton a .yshortcuts /* Yahoo! Mail Override */{
-		color:#FFFFFF;
-		font-family:Arial;
-		font-size:15px;
-		font-weight:bold;
-		letter-spacing:-.5px;
-		line-height:100%;
-		text-align:center;
-		text-decoration:none;
-	}
-	
-	#templateFooter{
-		background-color:#eaeaea;
-		border-top:0;
-	}
-	
-	.footerContent div{
-		color:#4f4f4f;
-		font-family:Georgia, Times, "Times New Roman", serif;
-		font-size:12px;
-		line-height:125%;
-		text-align:center;
-	}
-	
-	.footerContent img{
-		display:inline;
-	}
-</style>
+<title>Newsletter Template</title>
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <center>
@@ -210,7 +20,7 @@
                                     <td valign="middle" class="headerContent">
                                     
                                     	<!-- // Begin Module: Standard Header Image \\ -->
-                                    	<a href="http://www.harker.org/alumni"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/header-alumni-logo.png" alt="The Harker School" style="max-width:560px;" id="headerImage campaign-icon" /></a>
+                                    	<a href="http://www.harker.org/alumni"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/harker-email-logo.png" alt="The Harker School" style="max-width:560px;" id="headerImage campaign-icon" /></a>
                                     	<!-- // End Module: Standard Header Image \\ -->
                                     
                                     </td>
