--- a/letter.html
+++ b/letter.html
@@ -1,187 +1,12 @@
-<style type="text/css">
-	/* Client-specific Styles */
-	#outlook a{padding:0;} /* Force Outlook to provide a "view in browser" button. */
-	body{width:100% !important;} .ReadMsgBody{width:100%;} .ExternalClass{width:100%;} /* Force Hotmail to display emails at full width */
-	body{-webkit-text-size-adjust:none;} /* Prevent Webkit platforms from changing default text sizes. */
-	
-	/* Reset Styles */
-	body{margin:0; padding:0;}
-	img{border:0; outline:none; text-decoration:none;}
-	table td{border-collapse:collapse;}
-	#backgroundTable{height:100% !important; margin:0; padding:0; width:100% !important;}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-	a:link, a:visited, /* Yahoo! Mail Override */ a .yshortcuts /* Yahoo! Mail Override */{
-		color:#E36A22;
-		font-weight:normal;
-		text-decoration:underline;
-	}
-	
-	body, #backgroundTable{
-		background-color:#eaeaea;
-	}
-	
-	#templateContainer{
-		border: none;
-	}
-	
-	h1, .h1{
-		color:#202020;
-		display:block;
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-		font-size:34px;
-		font-weight:bold;
-		line-height:100%;
-		margin-top:0;
-		margin-right:0;
-		margin-bottom:10px;
-		margin-left:0;
-		text-align:left;
-	}
-
-	h2, .h2{
-		color:#202020;
-		display:block;
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-		font-size:30px;
-		font-weight:bold;
-		line-height:100%;
-		margin-top:0;
-		margin-right:0;
-		margin-bottom:10px;
-		margin-left:0;
-		text-align:left;
-	}
-
-	h3, .h3{
-		color:#202020;
-		display:block;
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-		font-size:26px;
-		font-weight:bold;
-		line-height:100%;
-		margin-top:0;
-		margin-right:0;
-		margin-bottom:10px;
-		margin-left:0;
-		text-align:left;
-	}
-
-	h4, .h4{
-		color:#202020;
-		display:block;
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-		font-size:22px;
-		font-weight:bold;
-		line-height:100%;
-		margin-top:0;
-		margin-right:0;
-		margin-bottom:10px;
-		margin-left:0;
-		text-align:left;
-	}
-	
-	#templateHeader{
-		background-color:#eaeaea;
-		border-bottom:0;
-	}
-	
-	.headerContent{
-		color:#202020;
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-		font-size:34px;
-		font-weight:bold;
-		line-height:100%;
-		padding:0;
-		text-align:center;
-		vertical-align:middle;
-	}
-	
-	.headerContent a:link, .headerContent a:visited, /* Yahoo! Mail Override */ .headerContent a .yshortcuts /* Yahoo! Mail Override */{
-		color:#336699;
-		font-weight:normal;
-		text-decoration:underline;
-	}
-	
-	#headerImage{
-		width:560px;
-	}
-	
-	.bodyContent{
-		background-color:#dadada;
-	}
-	
-	.bodyContent div{
-		color:#282828;
-		font-family:Georgia, Times, "Times New Roman", serif;
-		font-size:14px;
-		line-height:150%;
-		text-align:left;
-	}
-
-	.bodyContent p{
-		color:#282828;
-		font-family:Georgia, Times, "Times New Roman", serif;
-		font-size:14px;
-		line-height:150%;
-		text-align:left;
-		margin:0 0 10px;
-	}
-	
-	.bodyContent img{
-		display:inline;
-		height:auto;
-	}
-
-	.bodyContent .quote {
-		margin:20px 0 20px 40px;
-		border-left:1px solid #a3a3a3;
-		padding:20px;
-		color:#595959;
-		font-style:italic;
-	}
-
-	.bodyContent .quote p {
-		color:#595959;
-		font-style:italic;
-	}
-
-	#signature div {
-		font-family:Georgia, Times, "Times New Roman", serif;
-	}
-
-	#signature .signatureTitle, #signature .signatureContact {
-		font-size:12px;
-		color:#595959;
-	}
-
-	#signature .signatureName {
-		color:#282828;
-		font-size:36px;
-		line-height:100%;
-	}
-
-	#signature .signatureContact {
-		font-style:italic;
-	}
-	
-	#templateFooter{
-		background-color:#eaeaea;
-		border-top:0;
-	}
-	
-	.footerContent div{
-		color:#4f4f4f;
-		font-family:Georgia, Times, "Times New Roman", serif;
-		font-size:12px;
-		line-height:125%;
-		text-align:center;
-	}
-	
-	.footerContent img{
-		display:inline;
-	}
-</style>
-
+<title>Letter Template</title>
+<link rel="stylesheet" href="style.css" />
+</head>
+<body>
 <center>
 	<table border="0" cellpadding="20" cellspacing="0" height="100%" width="100%" id="backgroundTable">
     	<tr>
@@ -316,3 +141,5 @@
         </tr>
     </table>
 </center>
+</body>
+</html>
