--- a/postcard.html
+++ b/postcard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -7,35 +7,35 @@
 <link rel="stylesheet" href="style.css" />
 </head>
 <style>
-.postcardBorder {
-	background: #ffffff;
-	border: 3px solid #cccccc;
-}
+    .postcardBorder {
+    	background: #ffffff;
+    	border: 3px solid #cccccc;
+    }
 
-.postcardContent {
-	background-color:#D9E2EB;
-}
+    .postcardContent {
+    	background-color:#D9E2EB;
+    }
 
-#edgeLeft div {
-	text-align:left;
-}
+    #edgeLeft div {
+    	text-align:left;
+    }
 
-#postcardText div {
-	text-align:center;
-	color: #4f4f4f;
-	font-size: 16px;
-}
+    #postcardText div {
+    	text-align:center;
+    	color: #4f4f4f;
+    	font-size: 16px;
+    }
 
-#edgeRight div {
-	text-align:right;
-}
+    #edgeRight div {
+    	text-align:right;
+    }
 </style>
 <body>
 <center>
 	<table border="0" cellpadding="20" cellspacing="0" height="100%" width="100%" id="backgroundTable">
     	<tr>
         	<td align="center" valign="top">
-            	<table border="0" cellpadding="0" cellspacing="0" width="560" id="templateContainer">
+            	<table border="0" cellpadding="0" cellspacing="0" width="568" id="templateContainer">
                 	<tr>
                     	<td align="center" valign="top">
                             <!-- // Begin Template Header \\ -->
@@ -44,7 +44,7 @@
                                     <td class="headerContent">
                                     
                                     	<!-- // Begin Module: Standard Header Image \\ -->
-                                    	<a href="http://www.harker.org"><img src="images/harker-email-logo.png" alt="The Harker School" style="max-width:560px;" id="headerImage campaign-icon" /></a>
+                                    	<a href="http://www.harker.org"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/harker-email-logo.png" alt="The Harker School" style="max-width:560px;" id="headerImage campaign-icon" /></a>
                                     	<!-- // End Module: Standard Header Image \\ -->
                                     
                                     </td>
@@ -56,8 +56,9 @@
                 	<tr>
                     	<td align="center" valign="top">
                             <!-- // Begin Template Body \\ -->
-                        	<table border="0" cellpadding="0" cellspacing="0" width="560" id="templateBody">
+                        	<table border="0" cellpadding="0" cellspacing="0" width="568" id="templateBody">
                             	<tr>
+                                    <td valign="top" width="4"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/dropshadow-left.gif" width="4" height="100%" /></td>
                                     <td valign="top" class="bodyContent">
 
                                     	<!-- // Begin Module: Standard Postcard Content \\ -->
@@ -70,7 +71,7 @@
 			                                        			<table border="0" cellpadding="0" cellspacing="0" width="100%" class="postcardContent">
 			                                            			<tr>
 				                                                        <td valign="top">
-				                                                            <img src="images/top.jpg" style="max-width:500px;" />
+				                                                            <img src="http://www.harker.org/uploaded/themes/enotify-2012/images/top.jpg" style="max-width:500px;" />
 				                                                        </td>
 				                                                    </tr>
 				                                                    <tr>
@@ -79,7 +80,7 @@
 					                                                			<tr>
 							                                                        <td valign="top" align="left" width="100" id="edgeLeft">
 							                                                        	<div>
-							                                                        		<img src="images/left.jpg" style="max-width:100px;" />
+							                                                        		<img src="http://www.harker.org/uploaded/themes/enotify-2012/images/left.jpg" style="max-width:100px;" />
 							                                                        	</div>
 							                                                        </td>
 							                                                        <td valign="middle" align="center" width="300" id="postcardText">
@@ -98,7 +99,7 @@
 							                                                        </td>
 							                                                        <td valign="top" align="right" width="100" id="edgeRight">
 							                                                        	<div>
-							                                                        		<img src="images/right.jpg" style="max-width:100px;" />
+							                                                        		<img src="http://www.harker.org/uploaded/themes/enotify-2012/images/right.jpg" style="max-width:100px;" />
 							                                                        	</div>
 							                                                        </td>
 							                                                    </tr>
@@ -107,7 +108,7 @@
 				                                                    </tr>
 				                                                    <tr>
 				                                                        <td valign="top">
-				                                                            <img src="images/bottom.jpg" style="max-width:500px;" />
+				                                                            <img src="http://www.harker.org/uploaded/themes/enotify-2012/images/bottom.jpg" style="max-width:500px;" />
 				                                                        </td>
 				                                                    </tr>
 				                                                </table>
@@ -120,9 +121,15 @@
                                         <!-- // End Module: Standard Postcard Content \\ -->
 
                                     </td>
+                                    <td valign="top" width="4"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/dropshadow-right.gif" width="4" height="100%" /></td>
                                 </tr>
                             </table>
                             <!-- // End Template Body \\ -->
+                        </td>
+                    </tr>
+                    <tr>
+                        <td align="center" valign="top" height="7">
+                            <img src="http://www.harker.org/uploaded/themes/enotify-2012/images/dropshadow-bottom.gif" width="568" height="7" style="display:block;" />
                         </td>
                     </tr>
                 	<tr>
