--- a/newsletter.html
+++ b/newsletter.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -20,7 +20,7 @@
                                     <td valign="middle" class="headerContent">
                                     
                                     	<!-- // Begin Module: Standard Header Image \\ -->
-                                    	<a href="http://www.harker.org/alumni"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/harker-email-logo.png" alt="The Harker School" style="max-width:560px;" id="headerImage campaign-icon" /></a>
+                                    	<a href="http://www.harker.org/alumni"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/header-alumni-logo.png" alt="Harker Alumni" style="max-width:560px;" id="headerImage campaign-icon" /></a>
                                     	<!-- // End Module: Standard Header Image \\ -->
                                     
                                     </td>
@@ -36,6 +36,16 @@
                             	<tr>
                             		<td valign="top" width="4"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/dropshadow-left.gif" width="4" height="100%" /></td>
                                     <td valign="top" class="bodyContent" width="560">
+
+                                    	<!-- // Begin Top Shadow \\ -->
+                                        <table border="0" cellpadding="0" cellspacing="0" width="560">
+                                            <tr>
+                                                <td align="center" valign="top" height="7">
+                                                    <img src="http://www.harker.org/uploaded/assets/graphics/enotify/corp-email-top-shadow.gif" style="outline: none; text-decoration: none; display: block; border: 0px;">
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <!-- // End Top Shadow \\ -->
 
                                     	<table border="0" cellpadding="0" cellspacing="0" width="560" >
 			                            	<tr>
@@ -232,7 +242,7 @@
 				                                                            <table border="0" cellpadding="20" cellspacing="0" width="100%">
 				                                                            	<tr>
 				                                                            		<td valign="top" style="padding-top: 0;">
-				                                                            			<table border="0" cellpadding="15" cellspacing="0" width="100%" class="templateButton">
+				                                                            			<table border="0" cellpadding="10" cellspacing="0" width="100%" class="templateButton">
 							                                                            	<tr>
 							                                                                	<td valign="middle" class="templateButtonContent">
 							                                                                    	<div>
