--- a/summer.html
+++ b/summer.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -52,7 +52,7 @@
                             <!-- // Begin Template Body \\ -->
                         	<table border="0" cellpadding="0" cellspacing="0" width="560" id="templateBody">
                         		<tr>
-                        			<td valign="top" width="560"><img src="http://templates.harkercommunications.com/corp-email/summer-enotify/main-top-corners.gif" style="width:560px;" /></td>
+                        			<td valign="top" width="560"><img src="http://templates.harkercommunications.com/corp-email/summer-enotify/main-top-corners.gif" style="width:560px;display:block;" /></td>
                         		</tr>
                             	<tr>
                                     <td valign="top" class="bodyContent" width="560">
